objects/pse__Assignment_Milestone__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentMilestoneHelp</customHelpPage>
    <description>A junction object that stores relationships between assignments and milestones.</description>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <description>Master detail relationship to Assignment</description>
        <inlineHelpText>Master detail relationship to Assignment</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Assignment Milestones</relationshipLabel>
        <relationshipName>Assignment_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <description>Master detail relationship to Milestone.</description>
        <inlineHelpText>Master detail relationship to Milestone.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Assignment Milestones</relationshipLabel>
        <relationshipName>Assignment_Milestones</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Id__c</fullName>
        <formula>pse__Assignment__r.pse__Resource__c</formula>
        <label>Resource Id</label>
        <type>Text</type>
    </fields>
    <label>Assignment Milestone</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validation rule to check user entering assignment and milestone belonging to the same project.</description>
        <errorConditionFormula>pse__Assignment__r.pse__Project__c  !=  pse__Milestone__r.pse__Project__c</errorConditionFormula>
        <errorMessage>A Milestone may only be associated with an Assignment for the same Project.</errorMessage>
    </validationRules>
</CustomObject>